--- a/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-02 10:32+0000\n"
+"POT-Creation-Date: 2023-03-02 23:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -50,7 +50,7 @@ msgid "PD was sent to Vision."
 msgstr "تم إرسال وثيقة البرامج إلى برنامج فيجين."
 
 msgid "Capacity Strengthening Costs"
-msgstr ""
+msgstr "تكاليف تعزيز القدرات"
 
 msgid "Report"
 msgstr "تقرير"
@@ -686,19 +686,21 @@ msgstr ""
 "المدني ، يرجى إزالة النوع"
 
 msgid "Unable to associate staff member to UNICEF user"
-msgstr ""
+msgstr "تعذر ربط الموظف بمستخدم اليونيسف"
 
 #, python-format
 msgid "This user already exists under a different partnership: %s"
-msgstr ""
+msgstr "هذا المستخدم موجود بالفعل ضمن شراكة مختلفة: %s"
 
 #, python-format
 msgid ""
 "User emails cannot be changed, please remove the user and add another one: %s"
 msgstr ""
+"لا يمكن تغيير عناوين البريد الإلكتروني للمستخدم ، يرجى إزالة المستخدم وإضافة "
+"مستخدم آخر: %s"
 
 msgid "User already synced to PRP and cannot be disabled."
-msgstr ""
+msgstr "قام المستخدم بالفعل بمزامنة PRP ولا يمكن تعطيله."
 
 msgid "Name"
 msgstr "اسم"
@@ -1486,7 +1488,7 @@ msgid "Accessing this item is not allowed."
 msgstr "الوصول إلى هذا العنصر غير مسموح به."
 
 msgid "Country Programme is required for PCAs!"
-msgstr ""
+msgstr "البرنامج القطري مطلوب من أجل PCAs!"
 
 msgid "URL"
 msgstr "عنوان Url"
@@ -1575,53 +1577,53 @@ msgid ""
 msgstr "لا يمكن إضافة تعديل جديد أثناء إجراء تعديل آخر من نفس النوع."
 
 msgid "Date cannot be in the future!"
-msgstr ""
+msgstr "لا يمكن أن يكون التاريخ في المستقبل!"
 
 msgid "Cannot add a new amendment while the partner is blocked in Vision."
-msgstr ""
+msgstr "لا يمكن إضافة تعديل جديد أثناء حظر الشريك في Vision."
 
 msgid "Other description required, if type 'Other' selected."
-msgstr ""
+msgstr "مطلوب وصف آخر ، إذا تم تحديد نوع &quot;أخرى&quot;."
 
 msgid "Planned Visit to be set only at Partner level"
-msgstr ""
+msgstr "سيتم تعيين الزيارة المخططة على مستوى الشريك فقط"
 
 msgid "Planned Visit cannot be set for Terminated interventions"
-msgstr ""
+msgstr "لا يمكن تعيين الزيارة المخططة للتدخلات المنتهية"
 
 msgid ""
 "An attachment cannot be changed in statuses \"Ended, Closed or Terminated\""
-msgstr ""
+msgstr "لا يمكن تغيير المرفق في الحالات &quot;منتهي أو مغلق أو منتهي&quot;"
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
-msgstr ""
+msgstr "لا يمكن تحديث الإخراج لشريك محظور في Vision"
 
 msgid "Invalid CP Output provided."
 msgstr "تم توفير مخرج برنامج قطري غير صالح."
 
 msgid "lower_result has an id but cannot be found in the db"
-msgstr ""
+msgstr "low_result لها معرف ولكن لا يمكن العثور عليها في db"
 
 msgid ""
 "Cannot change the intervention that this reporting period is associated with."
-msgstr ""
+msgstr "لا يمكن تغيير التدخل الذي ترتبط به فترة التقرير هذه."
 
 msgid "end_date must be on or after start_date"
-msgstr ""
+msgstr "يجب أن يكون تاريخ الانتهاء في تاريخ البدء أو بعده"
 
 msgid "due_date must be on or after end_date"
-msgstr ""
+msgstr "يجب أن يكون تاريخ الاستحقاق في تاريخ الانتهاء أو بعده"
 
 msgid "This period overlaps an existing reporting period."
-msgstr ""
+msgstr "تتداخل هذه الفترة مع فترة إعداد التقارير الحالية."
 
 #, python-format
 msgid "One or more of the FRs selected is related to a different PD/SPD, %s"
-msgstr ""
+msgstr "يرتبط واحد أو أكثر من FRs المحددة بـ PD / SPD مختلفة ،%s"
 
 #, python-format
 msgid "This field is limited to %d or less characters."
-msgstr ""
+msgstr "هذا الحقل محدد بـ %d أو أقل من الأحرف."
 
 #, python-format
 msgid ""
@@ -1657,17 +1659,17 @@ msgid "This field cannot be empty."
 msgstr "هذا الحقل لا يمكن ان يكون فارغا."
 
 msgid "Requirement ID passed in does not exist"
-msgstr ""
+msgstr "معرف المتطلبات الذي تم تمريره غير موجود"
 
 msgid "Requirement ID passed in belongs to a different intervention"
-msgstr ""
+msgstr "معرف المتطلبات الذي تم تمريره ينتمي إلى تدخل مختلف"
 
 msgid "You're trying to delete a record that has a start date in the past"
-msgstr ""
+msgstr "أنت تحاول حذف سجل له تاريخ بدء في الماضي"
 
 msgid ""
 "A record that starts in the passed cannot be modified on a non-draft PD/SPD"
-msgstr ""
+msgstr "لا يمكن تعديل السجل الذي يبدأ في تمرير على PD / SPD غير المسودة"
 
 msgid ""
 "Invalid budget data. Total cash should be equal to items number * price per "
@@ -1681,33 +1683,39 @@ msgid ""
 "The email for the partner contact is used by another partner contact. Email "
 "has to be unique to proceed %s"
 msgstr ""
+"يتم استخدام البريد الإلكتروني لجهة اتصال الشريك من قبل جهة اتصال شريك أخرى. "
+"يجب أن يكون البريد الإلكتروني فريدًا للمتابعة %s"
 
 msgid ""
 "The Partner Staff member you are trying to activate is associated with a "
 "different Partner Organization"
-msgstr ""
+msgstr "الموظف الشريك الذي تحاول تنشيطه مرتبط بمنظمة شريكة مختلفة"
 
 msgid ""
 "User already synced to PRP and cannot be disabled. Please instruct the "
 "partner to disable from PRP"
 msgstr ""
+"قام المستخدم بالفعل بمزامنة PRP ولا يمكن تعطيله. يرجى توجيه الشريك للتعطيل "
+"من PRP"
 
 msgid "The Date of Report cannot be in the future"
-msgstr ""
+msgstr "لا يمكن أن يكون تاريخ التقرير في المستقبل"
 
 msgid "Planned Visit can be set only for Government partners"
-msgstr ""
+msgstr "يمكن تعيين الزيارة المخططة للشركاء الحكوميين فقط"
 
 msgid "The basis for risk rating has to be blank if Type is Low or High"
-msgstr ""
+msgstr "يجب أن يكون أساس تصنيف المخاطر فارغًا إذا كان النوع منخفضًا أو مرتفعًا"
 
 msgid ""
 "The basis for risk rating has to be blank if rating is Not Required and type "
 "is Micro Assessment"
 msgstr ""
+"يجب أن يكون أساس تصنيف المخاطر فارغًا إذا كان التصنيف غير مطلوب والنوع هو "
+"التقييم الدقيق"
 
 msgid "Vendor number must belong to PRG2 account group"
-msgstr ""
+msgstr "يجب أن ينتمي رقم البائع إلى مجموعة حسابات PRG2"
 
 msgid "Unknown intervention."
 msgstr "تدخل غير معروف."
@@ -1851,9 +1859,10 @@ msgid ""
 "Agreement cannot transition to signed until the start date is less than or "
 "equal to today"
 msgstr ""
+"لا يمكن نقل الاتفاقية إلى موقع حتى يكون تاريخ البدء أقل من أو يساوي اليوم"
 
 msgid "Agreement cannot transition to signed unless the end date is defined"
-msgstr ""
+msgstr "لا يمكن نقل الاتفاقية إلى موقع ما لم يتم تحديد تاريخ الانتهاء"
 
 msgid "Cannot Transition without termination doc attached"
 msgstr "لا يمكن الانتقال بدون إرفاق مستند الإنهاء"
@@ -1868,21 +1877,23 @@ msgid ""
 "A PCA with this partner already exists for this Country Programme Cycle. If "
 "the record is in \"Draft\" status please edit that record."
 msgstr ""
+"يوجد بالفعل PCA مع هذا الشريك لدورة البرنامج القطري هذه. إذا كان السجل في "
+"حالة &quot;مسودة&quot; يرجى تعديل ذلك السجل."
 
 msgid ""
 "Agreement start date needs to be earlier than or the same as the end date"
-msgstr ""
+msgstr "يجب أن يكون تاريخ بدء الاتفاقية قبل تاريخ الانتهاء أو نفس تاريخه"
 
 msgid "You cannot have more than 1 PCA active per Partner within 1 CP"
-msgstr ""
+msgstr "لا يمكن أن يكون لديك أكثر من 1 PCA نشط لكل شريك في حدود 1 CP"
 
 msgid "Partner must be CSO in order to create a PCA."
-msgstr ""
+msgstr "يجب أن يكون الشريك CSO من أجل إنشاء PCA."
 
 msgid ""
 "Please check that the Document is attached and signatures are not in the "
 "future"
-msgstr ""
+msgstr "يرجى التحقق من إرفاق المستند وأن التوقيعات ليست في المستقبل"
 
 #, python-format
 msgid "Required fields not completed in %(status)s: %(field)s"
@@ -1896,7 +1907,7 @@ msgid "Today is not after the end date"
 msgstr "اليوم ليس بعد تاريخ الانتهاء"
 
 msgid "Only Partnership Managers can execute this transition"
-msgstr ""
+msgstr "يمكن لمديري الشراكة فقط تنفيذ هذا النقل"
 
 msgid "End date is in the future"
 msgstr "تاريخ الانتهاء في المستقبل"
@@ -1962,7 +1973,7 @@ msgid "Agreement selected is not of type SSFA"
 msgstr "الاتفاقية المختارة ليست من نوع اتفاقية التمويل الصغير"
 
 msgid " without deleting the indicators first"
-msgstr ""
+msgstr "دون حذف المؤشرات أولا"
 
 #, python-format
 msgid ""
@@ -1970,7 +1981,6 @@ msgid ""
 "cannot be removed %(sections)s "
 msgstr ""
 "%(sections)s ديد الأقسام التالية على مؤشرات وثيقة البرامج ولا يمكن إزالتها"
-"٪قسام) s"
 
 #, python-format
 msgid ""
@@ -2071,95 +2081,97 @@ msgid "Today is not after the start date"
 msgstr "اليوم ليس بعد تاريخ البدء"
 
 msgid "Cannot delete a signed amendment"
-msgstr ""
+msgstr "لا يمكن حذف تعديل موقع"
 
 msgid ""
 "Cannot delete an agreement that is not Draft or has PDs/SSFAs associated "
 "with it"
-msgstr ""
+msgstr "لا يمكن حذف اتفاقية ليست مسودة أو بها PDs / SSFAs مرتبطة بها"
 
 msgid "Workspace is required as a queryparam"
-msgstr ""
+msgstr "مساحة العمل مطلوبة كمعلمة استعلام"
 
 #, python-format
 msgid "Workspace code provided is not a valid business_area_code: %s"
-msgstr ""
+msgstr "رمز مساحة العمل الذي تم توفيره ليس رمز منطقة_عمل صالحًا:  %s"
 
 msgid "ID values must be integers"
-msgstr ""
+msgstr "يجب أن تكون قيم المعرفات أعدادًا صحيحة"
 
 msgid "Deleting an attachment can only be done in Draft status"
-msgstr ""
+msgstr "لا يمكن حذف المرفق إلا في حالة المسودة"
 
 msgid ""
 "This PD Output has indicators related, please remove the indicators first"
-msgstr ""
+msgstr "يحتوي إخراج PD هذا على مؤشرات ذات صلة ، يرجى إزالة المؤشرات أولاً"
 
 msgid ""
 "This CP Output cannot be removed from this Intervention because there are "
 "nested Results, please remove all Document Results to continue"
 msgstr ""
+"لا يمكن إزالة إخراج CP هذا من هذا التدخل نظرًا لوجود نتائج متداخلة ، يرجى "
+"إزالة جميع نتائج المستند للمتابعة"
 
 msgid "Deleting an indicator is only possible in status Draft."
-msgstr ""
+msgstr "حذف المؤشر ممكن فقط في حالة المسودة."
 
 msgid "Cannot delete a PD or SSFA that is not Draft"
-msgstr ""
+msgstr "لا يمكن حذف PD أو SSFA الذي ليس مسودة"
 
 msgid "Cannot delete a PD or SSFA that has Planned Trips"
-msgstr ""
+msgstr "لا يمكن حذف PD أو SSFA الذي يحتوي على رحلات مخططة"
 
 msgid "Cannot delete a PD or SSFA that was manually moved back to Draft"
-msgstr ""
+msgstr "لا يمكن حذف PD أو SSFA الذي تم إرجاعه يدويًا إلى المسودة"
 
 msgid "PD has already been sent to Partner."
-msgstr ""
+msgstr "تم إرسال PD بالفعل إلى الشريك."
 
 msgid "Meeting date is not available."
 msgstr "تاريخ الاجتماع غير متاح."
 
 msgid "Action is not allowed"
-msgstr ""
+msgstr "الإجراء غير مسموح به"
 
 msgid "You need to be a focal point in order to perform this action"
-msgstr ""
+msgstr "يجب أن تكون نقطة محورية من أجل تنفيذ هذا الإجراء"
 
 msgid "Partner has already accepted this PD."
-msgstr ""
+msgstr "قبل الشريك بالفعل هذا PD."
 
 msgid ""
 "You cannot perform this action while the PD is not available for partner to "
 "edit"
-msgstr ""
+msgstr "لا يمكنك تنفيذ هذا الإجراء أثناء عدم توفر PD للشريك لتحريره"
 
 msgid ""
 "You cannot perform this action while the PD is not available for UNICEF to "
 "edit"
-msgstr ""
+msgstr "لا يمكنك تنفيذ هذا الإجراء عندما يكون PD غير متاح لليونيسيف لتحريره"
 
 msgid "UNICEF has already accepted this PD."
-msgstr ""
+msgstr "قبلت اليونيسف بالفعل هذا PD."
 
 msgid "Only focal points or budget owners can accept"
-msgstr ""
+msgstr "يمكن فقط قبول جهات الاتصال أو مالكي الميزانية"
 
 msgid "Only focal points can accept"
-msgstr ""
+msgstr "يمكن فقط قبول النقاط المحورية"
 
 msgid "PD needs to be in Review state"
-msgstr ""
+msgstr "يجب أن يكون PD في حالة المراجعة"
 
 msgid "PD review is missing"
-msgstr ""
+msgstr "مراجعة PD مفقودة"
 
 msgid "Only overall approver can reject review."
-msgstr ""
+msgstr "يمكن للموافق العام فقط رفض المراجعة."
 
 msgid "PD review already approved"
-msgstr ""
+msgstr "تمت الموافقة على مراجعة PD بالفعل"
 
 msgid "PD is already in Review status."
-msgstr ""
+msgstr "PD موجود بالفعل في حالة المراجعة."
 
 #, python-format
 msgid ""
@@ -2167,105 +2179,102 @@ msgid ""
 "This can be caused by parallel merged amendment or changed original "
 "intervention. Amendment should be re-created."
 msgstr ""
+"خطأ في الدمج: تم تغيير الحقل المعدل بالفعل (%(field)s في %(instance)s). يمكن "
+"أن يحدث هذا بسبب التعديل المدمج الموازي أو التدخل الأصلي المتغير. يجب إعادة "
+"إنشاء التعديل."
 
 msgid "PD has already been cancelled."
-msgstr ""
+msgstr "تم بالفعل إلغاء PD."
 
 msgid "Only focal points or budget owners can cancel"
-msgstr ""
+msgstr "يمكن فقط للنقاط المحورية أو مالكي الميزانية الإلغاء"
 
 msgid "PD has already been terminated."
-msgstr ""
+msgstr "تم بالفعل إنهاء PD."
 
 msgid "Only focal points or budget owners can terminate"
-msgstr ""
+msgstr "يمكن فقط لجهات الاتصال أو مالكي الميزانية إنهاء الخدمة"
 
 msgid "PD has already been suspended."
-msgstr ""
+msgstr "تم بالفعل تعليق PD."
 
 msgid "Only focal points or budget owners can suspend"
-msgstr ""
+msgstr "فقط نقاط الاتصال أو مالكو الميزانية يمكنهم التعليق"
 
 msgid "PD is not suspended."
-msgstr ""
+msgstr "لم يتم تعليق PD."
 
 msgid "Only focal points or budget owners can unsuspend"
-msgstr ""
+msgstr "يمكن فقط لجهات الاتصال أو مالكي الميزانية إلغاء التعليق"
 
 msgid "PD is already in Signature status."
-msgstr ""
+msgstr "PD موجود بالفعل في حالة التوقيع."
 
 msgid "Only overall approver can accept review."
-msgstr ""
+msgstr "يمكن للموافق العام فقط قبول المراجعة."
 
 msgid "PD is already unlocked."
-msgstr ""
+msgstr "تم إلغاء تأمين PD بالفعل."
 
 msgid "PD is currently with Partner"
-msgstr ""
+msgstr "PD حاليا مع شريك"
 
 msgid "Only focal points or budget owners can send to partner"
-msgstr ""
+msgstr "يمكن فقط لنقاط الاتصال أو مالكي الميزانية الإرسال إلى الشريك"
 
 msgid "PD is currently with UNICEF"
-msgstr ""
+msgstr "PD يعمل حاليًا مع اليونيسف"
 
 msgid "Only partner focal points can send to UNICEF"
-msgstr ""
+msgstr "يمكن لنقاط الاتصال الشريكة فقط الإرسال إلى اليونيسف"
 
 msgid "Only amended interventions can be merged"
-msgstr ""
+msgstr "يمكن دمج التدخلات المعدلة فقط"
 
 msgid "Amendment cannot be merged yet"
-msgstr ""
+msgstr "لا يمكن دمج التعديل حتى الآن"
 
 msgid "Amendment does not exist for this pd"
-msgstr ""
+msgstr "التعديل غير موجود لهذا pd"
 
 msgid "Cannot delete a completed assessment"
-msgstr ""
+msgstr "لا يمكن حذف تقييم مكتمل"
 
 msgid "No vendor number provided for Partner Organization"
-msgstr ""
+msgstr "لم يتم توفير رقم البائع للمؤسسة الشريكة"
 
 msgid ""
 "There was a PCA/SSFA signed with this partner or a transaction was performed "
 "against this partner. The Partner record cannot be deleted"
 msgstr ""
+"كان هناك PCA / SSFA موقعة مع هذا الشريك أو تم إجراء معاملة ضد هذا الشريك. لا "
+"يمكن حذف سجل الشريك"
 
 msgid "This partner has trips associated to it"
-msgstr ""
+msgstr "هذا الشريك لديه رحلات مرتبطة به"
 
 msgid "This partner has cash transactions associated to it"
-msgstr ""
+msgstr "هذا الشريك لديه معاملات نقدية مرتبطة به"
 
 msgid "Terms to be acknowledged"
-msgstr ""
+msgstr "يجب الاعتراف بالشروط"
 
 msgid "Agreement with specified ID does not exist"
-msgstr ""
+msgstr "اتفاقية مع المعرف المحدد غير موجودة"
 
 msgid ""
 "Partner Organization has no vendor number stored, please report to an etools "
 "focal point"
 msgstr ""
+"لا يوجد لدى المؤسسة الشريكة رقم بائع مخزن ، يرجى إبلاغ نقطة اتصال etools"
 
 msgid "Partner Organization has no \"Authorized Officers selected\" selected"
-msgstr ""
+msgstr "لم يتم تحديد &quot;موظفون مفوضون&quot; محددون لدى المؤسسة الشريكة"
 
 msgid ""
 "Response returned by the Server does not have the necessary values to "
 "generate PCA"
-msgstr ""
+msgstr "لا تحتوي الاستجابة التي أرجعها الخادم على القيم اللازمة لإنشاء PCA"
 
 msgid "Partnership Manager role required for pca export."
-msgstr ""
-
-#~ msgid "HQ Cash"
-#~ msgstr "دعم المقر الرئيسي"
-
-#~ msgid "HQ cost"
-#~ msgstr "تكلفة المقر الرئيسي"
-
-#~ msgid "HQ support costs"
-#~ msgstr "تكاليف دعم المقر الرئيسي"
+msgstr "دور مدير الشراكة المطلوب لتصدير pca."
